<resources>
    <string name="app_name">APIPracticeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repository_photo">Repository Photo</string>
    <string name="language">言語名</string>
    <string name="stars">Starの数</string>
    <string name="watchers">閲覧数</string>
    <string name="fork_number">Forkの数</string>
    <string name="issue_number">Issueの数</string>
    <string name="writer_name">作者名</string>
    <string name="hint_text">リポジトリを検索</string>
    <string name="error_message">エラーが発生しました。やり直してください。</string>
    <string name="title">スター数ランキング</string>
    <string name="load">更新</string>
    <string name="error_dialog_title">エラーが発生しました</string>
    <string name="error_dialog_message">インターネット接続を確認して、やり直してください。</string>
    <string name="error_dialog_positive_button">やり直す</string>
    <string name="error_dialog_negative_button">閉じる</string>
    <string name="ranking_title">ランキング一覧</string>
    <string name="star_number">%1$d stars</string>
    <string name="watchers_number">%1$d watchers</string>
    <string name="forks_number">%1$d forks</string>
    <string name="open_issue">%1$d open issues</string>
    <string name="search_input_text_hint">検索</string>
</resources>