<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ResultFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/repository_name_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/repository_photo" />

            <TextView
                android:id="@+id/repository_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@id/language_left_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/language_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/language"
                app:layout_constraintBottom_toTopOf="@id/stars_left_text"
                app:layout_constraintEnd_toStartOf="@id/language_right_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repository_name_text" />

            <TextView
                android:id="@+id/language_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@id/language_left_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/language_left_text"
                app:layout_constraintTop_toTopOf="@id/language_left_text" />

            <TextView
                android:id="@+id/stars_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/stars"
                app:layout_constraintBottom_toTopOf="@id/watchers_left_text"
                app:layout_constraintEnd_toStartOf="@id/stars_right_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_left_text" />

            <TextView
                android:id="@+id/stars_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@id/stars_left_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/stars_left_text"
                app:layout_constraintTop_toTopOf="@id/stars_left_text" />

            <TextView
                android:id="@+id/watchers_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/watchers"
                app:layout_constraintBottom_toTopOf="@id/fork_left_text"
                app:layout_constraintEnd_toStartOf="@id/watchers_right_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stars_left_text" />

            <TextView
                android:id="@+id/watchers_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@id/watchers_left_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/watchers_left_text"
                app:layout_constraintTop_toTopOf="@id/watchers_left_text" />

            <TextView
                android:id="@+id/fork_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/fork_number"
                app:layout_constraintBottom_toTopOf="@id/issue_left_text"
                app:layout_constraintEnd_toStartOf="@id/fork_right_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/watchers_left_text" />

            <TextView
                android:id="@+id/fork_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@id/fork_left_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fork_left_text"
                app:layout_constraintTop_toTopOf="@id/fork_left_text" />

            <TextView
                android:id="@+id/issue_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/issue_number"
                app:layout_constraintBottom_toTopOf="@id/writer_left_name"
                app:layout_constraintEnd_toStartOf="@id/issue_right_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fork_left_text" />

            <TextView
                android:id="@+id/issue_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@id/issue_left_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/issue_left_text"
                app:layout_constraintTop_toTopOf="@id/issue_left_text" />

            <TextView
                android:id="@+id/writer_left_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/writer_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/writer_right_name"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issue_left_text" />

            <TextView
                android:id="@+id/writer_right_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@id/writer_left_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/writer_left_name"
                app:layout_constraintTop_toTopOf="@id/writer_left_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>