<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.apipracticeapp.ui.RankingViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RankingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/title_text"
                app:layout_constraintStart_toEndOf="@id/title_text"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/reload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/load"
                app:layout_constraintBottom_toBottomOf="@id/title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ranking_title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reload_button">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/search_input_layout"
                    style="@style/TextInputLayoutNoBorder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    app:endIconMode="clear_text"
                    app:endIconTint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@android:drawable/ic_menu_search"
                    app:startIconTint="@android:color/darker_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/search_input_text_hint"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_bar"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="@{viewModel.uiState.proceeding ? 0.5F : 0F}"
            android:background="#000000" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.uiState.proceeding ? View.VISIBLE : View.INVISIBLE}" />
</FrameLayout>
</layout>